Brand alignment: Official TerraLux colors (Gold #d8b670 + Green #455643), improved UX copy

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <!-- Hero Section -->
     <header class="hero">
         <div class="hero-content">
-            <h1 class="hero-title">Homes That Heal.<br/>A Community That Builds the Future.</h1>
-            <p class="hero-subtitle">TerraLux Living is a $25,000/year global lifestyle membership for conscious creators—connecting you to healing homes, biohacking centers, regenerative villages, and a curated benefits network worldwide</p>
+            <h1 class="hero-title">Live Inside<br/>The Future of Wellness</h1>
+            <p class="hero-subtitle">TerraLux Living is a global lifestyle membership connecting conscious creators to healing homes, biohacking centers, regenerative villages, and a curated benefits network across 15+ locations worldwide</p>
             <div class="hero-cta">
                 <a href="#apply" class="btn btn-primary btn-large">Become a Member</a>
                 <a href="#ecosystem" class="btn btn-secondary">Explore the Ecosystem</a>
@@ -39,15 +39,16 @@
     </header>
 
     <!-- Mission -->
-    <section class="section section-light">
+    <section class="section section-cream">
         <div class="container-narrow">
-            <h2 class="section-title">The Movement</h2>
-            <p class="body-large" style="text-align: center;">Terra Lux Living is gathering the tribe that will launch the future of how we live. We're not building a club—we're assembling a global community of builders, creatives, and visionaries who understand that health is infrastructure, environment shapes outcomes, and the future is launched by communities, not institutions.</p>
+            <h2 class="section-title">Your Health. Your Wealth. Your Legacy.</h2>
+            <p class="body-large" style="text-align: center;">TerraLux Living is for builders, investors, and conscious creators who know that <strong>where you live shapes who you become.</strong> We're not a club—we're a global network of healing homes, wellness villages, and curated experiences designed to support your highest performance, deepest restoration, and longest healthspan.</p>
+            <p style="text-align: center; margin-top: 24px; color: var(--gray-600); font-size: 17px;">Members gain priority access to regenerative architecture, biohacking centers, transformative experiences, and a tribe of aligned creators worldwide.</p>
         </div>
     </section>
 
     <!-- 4 Pillars -->
-    <section id="ecosystem" class="section section-indigo">
+    <section id="ecosystem" class="section section-green">
         <div class="container">
             <h2 class="section-title">The TerraLux Ecosystem</h2>
             <p class="section-intro">Four integrated pillars transforming how we live, work, and thrive</p>
@@ -87,8 +88,8 @@
     <!-- Benefits Network -->
     <section id="benefits" class="section section-light">
         <div class="container">
-            <h2 class="section-title">Your Global Benefits Network</h2>
-            <p class="section-intro">Priority access, exclusive discounts, and first invitations across our curated partner ecosystem</p>
+            <h2 class="section-title">Your Benefits Network</h2>
+            <p class="section-intro">Members save $10,000+ annually through discounts, priority access, and first invitations across our curated partner ecosystem</p>
             
             <div class="benefits-grid">
                 <div class="benefit-card">
@@ -211,8 +212,8 @@
     <!-- Membership -->
     <section id="membership" class="section section-light">
         <div class="container-narrow">
-            <h2 class="section-title">Founding Membership</h2>
-            <p class="section-intro">Join the tribe launching the future of how we live</p>
+            <h2 class="section-title">Membership Investment</h2>
+            <p class="section-intro">Lifetime priority access to the TerraLux global network</p>
             
             <div class="membership-card">
                 <div class="membership-header">
@@ -241,7 +242,7 @@
     </section>
 
     <!-- Application -->
-    <section id="apply" class="section section-indigo">
+    <section id="apply" class="section section-green">
         <div class="container-narrow">
             <h2 class="section-title" style="color: white;">Apply for Membership</h2>
             <p class="section-intro" style="color: rgba(255,255,255,0.85);">TerraLux Living is <strong>invitation-only</strong> for conscious creators, builders, and visionaries aligned with regenerative living</p>
