Add TerraLux logo to header and footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="nav">
         <div class="nav-inner">
             <div class="nav-brand">
-                <span class="brand-name">TerraLux Living</span>
+                <img src="src/assets/terralux-logo.svg" alt="TerraLux Living" class="nav-logo">
             </div>
             <a href="#apply" class="nav-cta">Apply Now</a>
         </div>
@@ -237,7 +237,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-brand">
-                <h3>TerraLux Living</h3>
+                <img src="src/assets/terralux-logo.svg" alt="TerraLux" class="footer-logo">
                 <p>Homes That Heal. A Community That Builds the Future.</p>
             </div>
             
