Increase logo sizes, fix Future Network spacing, update closing tagline

--- a/index.html
+++ b/index.html
@@ -147,14 +147,11 @@
             
             <div class="location-section location-section-full">
                 <h3>Future Network</h3>
-                <ul class="location-list">
-                    <li>Greece • Costa Rica • Portugal • Italy • Croatia • Malta</li>
-                    <li>Kuwait • Dubai • Qatar • Saudi Arabia</li>
-                </ul>
+                <p class="future-network-list">Greece • Costa Rica • Portugal • Italy • Croatia • Malta • Kuwait • Dubai • Qatar • Saudi Arabia</p>
             </div>
             
             <p style="margin-top: 32px; text-align: center; font-style: italic; color: var(--gray-600);">
-                Access, availability, and inclusions vary by location. Priority access never does.
+                Be a member of the global organizing platform building the future of wellness.
             </p>
         </div>
     </section>
